<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accountCredentialsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
    android:layout_margin="3dp"
    android:paddingHorizontal="6dp"
    android:paddingVertical="6dp"

    >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:textSize="16sp"

            android:textColor="@color/black"
            android:text="@string/account_info" />
        <EditText
            android:id="@+id/editTextEmail"
            style="@style/editText"

            android:hint="@string/email"
            android:inputType="textEmailAddress"

            />


        <EditText
            android:id="@+id/editTextPassword"
            style="@style/editText"
            android:hint="@string/password"

            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/editTextConfirmPassword"
            style="@style/editText"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"

            />
    </LinearLayout>