<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray4"

    android:padding="15dp"

    tools:context=".user.NewReminderActivity">
    <ScrollView
    android:layout_width="match_parent"

    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_border"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="11dp"


            android:paddingHorizontal="25dp"
            android:paddingVertical="10dp"
            >
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginHorizontal="62dp"

                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_launcher_icon_logo2"
                android:contentDescription="@string/login_name"
                />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/add_new_reminder" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDateTime"
            style="@style/editText"

            android:gravity="top"
            android:hint="@string/date_time"
            android:textColorHint="@color/gray3"
            android:clickable="false"

            android:focusable="false"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextAppointmentDetails"
            style="@style/editText"
            android:minHeight="100dp"
            android:gravity="top"
            android:hint="@string/details_remindert"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textColorHint="@color/gray3"
            />





        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSaveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:radius="15dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:background="@drawable/button_background"
            android:paddingEnd="35dp"
            android:paddingStart="35dp"
            android:textSize="16sp"
            android:text="@string/Reminder_send"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            />


    </LinearLayout>
</ScrollView>
</RelativeLayout>


