<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray4"

    
 android:orientation="vertical"

    tools:context=".SplashActivity">

    <RelativeLayout
       android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/item_border"
        android:padding="15dp"

        >


        <ImageView
            android:id="@+id/logo"
            style="@style/logoImageView"
            android:layout_marginBottom="5dp"

        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t"

            android:layout_below="@id/logo"
            android:layout_above="@id/buttonStart"
            android:orientation="vertical">
        <TextView
android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="26sp"
            android:textFontWeight="600"
            android:textColor="@color/black"
            android:text="@string/wlcOME_to"/>
        <TextView
android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

android:layout_below="@id/welcome"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textSize="26sp"
            android:textFontWeight="600"
            android:textColor="@color/black"

            android:text="@string/app_name"/>


        <ImageView
            android:id="@+id/image2"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/img3"
            android:layout_above="@id/descrip"
            android:layout_below="@id/app"


            />

        <TextView
android:id="@+id/descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:layout_gravity="bottom"
       android:layout_alignParentBottom="true"

            android:gravity="center"

            android:textSize="12sp"
            android:textColor="@color/gray3"
            android:text="@string/about_app" />

        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="54dp"


                android:layout_marginHorizontal="60dp"
                android:background="@drawable/button_background"
                android:textSize="22sp"
            android:textColor="@color/black"
                android:layout_marginTop="25dp"
               android:layout_alignParentBottom="true"
                android:text="@string/start" />
          
     

  

    </RelativeLayout>

</LinearLayout>


